--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<body>
 		<nav>
 			<div class="profile">
-				<img src="../img/Issa.png" alt="profile photo" />
+				<img src="Issa.png" alt="profile photo" />
 				<h1>Issa KANE</h1>
-                <img src="../img/jean.png" alt="profile photo" />
+                <img src="jean.png" alt="profile photo" />
                 <h1>Jean Loubissa</h1>
 			</div>
 			<ul>
@@ -37,7 +37,7 @@
 			</header>
 
 			<section class="presentation-image">
-				<img src="../img/IssaJean.png" alt="AI image" />
+				<img src="IssaJean.png" alt="AI image" />
 			</section>
 
 			<section class="projects-section">
