--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<body>
 		<nav>
 			<div class="profile">
-				<img src="../img/Issa.png" alt="profile photo" />
+				<img src="Issa.png" alt="profile photo" />
 				<h1>Issa KANE</h1>
-                <img src="../img/jean.png" alt="profile photo" />
+                <img src="jean.png" alt="profile photo" />
                 <h1>Jean Loubissa</h1>
 			</div>
 			<ul>
@@ -37,7 +37,7 @@
 			</header>
 
 			<section class="presentation-image">
-				<img src="../img/IssaJean.png" alt="AI image" />
+				<img src="IssaJean.png" alt="Photo de nous deux" />
 			</section>
 
 			<section class="projects-section">
@@ -100,20 +100,18 @@
 						</p>
 						<p class="dates">Juin 2023</p>
 					</div>
-
-
-					
 					
 				</div>
 			</section>
 		</section>
+		
 
 		<footer>
 			<div class="colonne">
-				<h3>Mes services</h3>
+				<h3>Nos services</h3>
 				<p>Développement de projet IA</p>
 				<p>Prestation en IA</p>
-				<p>Investissement en entreprises IA</p>
+				<p>Développement de site Web</p>
 			</div>
 			<div class="colonne">
 				<h3></h3>
