site avec les pages index contact et CV Issa

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
                 <h1>Jean Loubissa</h1>
 			</div>
 			<ul>
-				<li>A propos de nous</li>
-				<li>Nos projets</li>
-				<li>Curriculum Vitae</li>
-				<li>Contactez-nous</li>
+				<li><a href="index.html">A propos de nous</a></li>
+				<li><a href="cv_issa.html">CV de Issa</a></li>
+				<li><a href="cv_jean.html">CV de Jean</a></li>
+				<li><a href="contact.html">Contactez-nous</a></li>
 			</ul>
+			
 		</nav>
 
 		<section class="page-content">
@@ -33,7 +34,10 @@
                 </p>    
                 <p>Au cours de leur parcours à l'EFREI, Nous avons travaillé sur une multitude de projets passionnants, allant de la conception d'interfaces utilisateur intuitives pour des applications mobiles à la création de designs percutants pour des campagnes publicitaires. Leur portfolio est le reflet de leur créativité débordante et de leur capacité à s'adapter aux exigences les plus diverses.
 				</p>
-				<button>Dites Hey</button>
+				<a href="contact.html" id="lien-bouton">
+					<button>Dites Hey</button>
+				  </a>
+				  
 			</header>
 
 			<section class="presentation-image">
@@ -116,16 +120,16 @@
 				<p>Développement de site Web</p>
 			</div>
 			<div class="colonne">
-				<h3></h3>
-				<p></p>
-				<p></p>
-				<p></p>
+				<h3> Autres pages</h3>
+				<p><a href="index.html">A propos de nous</a></p>
+				<p><a href="cv_issa.html">CV de Issa</a></p>
+				<p><a href="cv_jean.html">CV de Jean</a></p>
+				<p><a href="contact.html">Contactez-nous</a></p>
 			</div>
 			<div class="colonne">
 				<h3>Nos adresses</h3>
-				<p>Issa.kane@efrei.net</p>
-				<p>Jean.loubissa@efrei.net</p>
-				<p></p>
+				<p><a href ="Issa.kane@efrei.net">©Issa KANE</a></p>
+				<p><a href ="Jean.loubissa@efrei.net">©Jean LOUBISSA</a></p>
 			</div>
 		</footer>
 	</body>
