Update Page CV Issa

--- a/CV_Issa.html
+++ b/CV_Issa.html
@@ -19,8 +19,8 @@
         </div>
         <ul>
             <li><a href="index.html">A propos de nous</a></li>
-            <li><a href="cv_issa.html">CV de Issa</a></li>
-            <li><a href="cv_jean.html">CV de Jean</a></li>
+            <li><a href="CV_issa.html">CV de Issa</a></li>
+            <li><a href="CV_jean.html">CV de Jean</a></li>
             <li><a href="contact.html">Contactez-nous</a></li>
         </ul>
         
@@ -84,7 +84,7 @@
             <div class="exp-desc">
                 <p>
                     <li>Promouvoir les services aux PME par téléphone (500 appels par jour) </li>
-                    <li>Coordination avec les entreprises pour la collecte des exigences pour leur sites</li>
+                    <li>Coordination avec les entreprises pour la collecte des exigences pour leurs sites</li>
                     <li>Compétences acquises : aisance oratoire, bonne maîtrise du pack Office</li>
                 </p>
             </div>
@@ -240,8 +240,8 @@
         <div class="colonne">
             <h3> Autres pages</h3>
             <p><a href="index.html">A propos de nous</a></p>
-            <p><a href="cv_issa.html">CV de Issa</a></p>
-            <p><a href="cv_jean.html">CV de Jean</a></p>
+            <p><a href="CV_issa.html">CV de Issa</a></p>
+            <p><a href="CV_jean.html">CV de Jean</a></p>
             <p><a href="contact.html">Contactez-nous</a></p>
         </div>
         <div class="colonne">
