--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			</div>
 			<ul>
 				<li><a href="index.html">A propos de nous</a></li>
-				<li><a href="cv_issa.html">CV de Issa</a></li>
-				<li><a href="cv_jean.html">CV de Jean</a></li>
+				<li><a href="CV_issa.html">CV de Issa</a></li>
+				<li><a href="CV_jean.html">CV de Jean</a></li>
 				<li><a href="contact.html">Contactez-nous</a></li>
 			</ul>
 			
