--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
 			</div>
 			<ul>
 				<li><a href="index.html">A propos de nous</a></li>
-				<li><a href="cv_issa.html">CV de Issa</a></li>
-				<li><a href="cv_jean.html">CV de Jean</a></li>
+				<li><a href="CV_issa.html">CV de Issa</a></li>
+				<li><a href="CV_jean.html">CV de Jean</a></li>
 				<li><a href="contact.html">Contactez-nous</a></li>
 			</ul>
 			
@@ -102,8 +102,8 @@
 			<div class="colonne">
 				<h3> Autres pages</h3>
 				<p><a href="index.html">A propos de nous</a></p>
-				<p><a href="cv_issa.html">CV de Issa</a></p>
-				<p><a href="cv_jean.html">CV de Jean</a></p>
+				<p><a href="CV_issa.html">CV de Issa</a></p>
+				<p><a href="CV_jean.html">CV de Jean</a></p>
 				<p><a href="contact.html">Contactez-nous</a></p>
 			</div>
 			<div class="colonne">
