--- a/index.html
+++ b/index.html
@@ -1,60 +1,53 @@
 <html lang="fr">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
-		<title>
-			Notre Portfolio
-		</title>
+		<meta charset="UTF-8" /> <!-- Définit l'encodage des caractères -->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Spécifie la compatibilité avec Internet Explorer -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Contrôle l'affichage sur les appareils mobiles -->
+		<link rel="stylesheet" href="style.css" /> <!-- Lie le fichier CSS externe -->
+		<title>Notre Portfolio</title> <!-- Titre de la page -->
 	</head>
 	<body>
 		<nav>
 			<div class="profile">
-				<img src="Issa.png" alt="profile photo" />
-				<h1>Issa KANE</h1>
-                <img src="jean.png" alt="profile photo" />
-                <h1>Jean Loubissa</h1>
+				<img src="Issa.png" alt="profile photo" /> <!-- Image de profil d'Issa -->
+				<h1>Issa KANE</h1> <!-- Nom d'Issa -->
+                <img src="jean.png" alt="profile photo" /> <!-- Image de profil de Jean -->
+                <h1>Jean Loubissa</h1> <!-- Nom de Jean -->
 			</div>
 			<ul>
-				<li><a href="index.html">A propos de nous</a></li>
-				<li><a href="CV_issa.html">CV de Issa</a></li>
-				<li><a href="CV_jean.html">CV de Jean</a></li>
-				<li><a href="contact.html">Contactez-nous</a></li>
+				<li><a href="index.html">A propos de nous</a></li> <!-- Lien vers la page "A propos de nous" -->
+				<li><a href="CV_Issa.html">CV de Issa</a></li> <!-- Lien vers le CV d'Issa -->
+				<li><a href="CV_Jean.html">CV de Jean</a></li> <!-- Lien vers le CV de Jean -->
+				<li><a href="contact.html">Contactez-nous</a></li> <!-- Lien vers la page "Contactez-nous" -->
 			</ul>
 			
 		</nav>
 
 		<section class="page-content">
 			<header>
-				<h1>Hey, nous sommes deux développeurs</h1>
-				<p>Jean Loubissa, doté d'un sens aiguisé de l'esthétique et d'une imagination débordante, trouve son inspiration dans les détails du monde qui l'entoure. Chaque ligne, chaque couleur, chaque texture est une source d'inspiration infinie pour lui. Il excelle dans la création de designs à la fois audacieux et harmonieux, qui captivent l'attention et racontent des histoires uniques.
-                </p>
-                <p>Issa Kane, quant à lui, est un esprit analytique et pragmatique, qui trouve sa passion dans la fusion de la beauté esthétique avec la fonctionnalité. Il excelle dans la compréhension des besoins des utilisateurs et dans la création de designs innovants qui améliorent leur expérience. Son approche méthodique et sa capacité à traduire les idées en réalité en font un partenaire idéal pour concrétiser des concepts ambitieux.
-                </p>    
-                <p>Au cours de leur parcours à l'EFREI, Nous avons travaillé sur une multitude de projets passionnants, allant de la conception d'interfaces utilisateur intuitives pour des applications mobiles à la création de designs percutants pour des campagnes publicitaires. Leur portfolio est le reflet de leur créativité débordante et de leur capacité à s'adapter aux exigences les plus diverses.
-				</p>
+				<h1>Hey, nous sommes deux développeurs</h1> <!-- Titre de la section d'en-tête -->
+				<p>Jean Loubissa, doté d'un sens aiguisé de l'esthétique et d'une imagination débordante, trouve son inspiration dans les détails du monde qui l'entoure. Chaque ligne, chaque couleur, chaque texture est une source d'inspiration infinie pour lui. Il excelle dans la création de designs à la fois audacieux et harmonieux, qui captivent l'attention et racontent des histoires uniques.</p> <!-- Description de Jean -->
+                <p>Issa Kane, quant à lui, est un esprit analytique et pragmatique, qui trouve sa passion dans la fusion de la beauté esthétique avec la fonctionnalité. Il excelle dans la compréhension des besoins des utilisateurs et dans la création de designs innovants qui améliorent leur expérience. Son approche méthodique et sa capacité à traduire les idées en réalité en font un partenaire idéal pour concrétiser des concepts ambitieux.</p> <!-- Description d'Issa -->
+                <p>Au cours de notre parcours à l'EFREI, Nous avons travaillé sur une multitude de projets passionnants, allant de la conception d'interfaces utilisateur intuitives pour des applications mobiles à la création de designs percutants pour des campagnes publicitaires. Leur portfolio est le reflet de leur créativité débordante et de leur capacité à s'adapter aux exigences les plus diverses.</p> <!-- Description générale -->
 				<a href="contact.html" id="lien-bouton">
-					<button>Dites Hey</button>
-				  </a>
+					<button>Dites Hey</button> <!-- Bouton "Dites Hey" -->
+				</a>
 				  
 			</header>
 
 			<section class="presentation-image">
 
-				<img src="IssaJean.png" alt="Photo de nous deux" />
+				<img src="IssaJean.png" alt="Photo de nous deux" /> <!-- Image de présentation des deux développeurs -->
 
 			</section>
 
 			<section class="projects-section">
-				<h1>Projets réalisés</h1>
+				<h1>Projets réalisés</h1> <!-- Titre de la section des projets -->
 				<div class="projects">
 					<div class="project">
-						<h4>Système de recommandation de livres</h4>
-						<p class="description">
-							Ce projet consiste à développer un système de recommandation de livres en utilisant Python, notamment en exploitant des fonctionnalités telles que le traitement du langage naturel (NLP) et les algorithmes de filtrage collaboratif.
-						</p>
-						<p class="dates">Décembre 2021</p>
+						<h4>Système de recommandation de livres</h4> <!-- Titre du projet -->
+						<p class="description">Ce projet consiste à développer un système de recommandation de livres en utilisant Python, notamment en exploitant des fonctionnalités telles que le traitement du langage naturel (NLP) et les algorithmes de filtrage collaboratif.</p> <!-- Description du projet -->
+						<p class="dates">Décembre 2021</p> <!-- Dates du projet -->
 					</div>
                     <div class="project">
 						<h4>Jeu Takuzu</h4>
@@ -106,7 +99,6 @@
 						</p>
 						<p class="dates">Juin 2023</p>
 					</div>
-					
 				</div>
 			</section>
 		</section>
@@ -114,16 +106,16 @@
 
 		<footer>
 			<div class="colonne">
-				<h3>Nos services</h3>
-				<p>Développement de projet IA</p>
-				<p>Prestation en IA</p>
-				<p>Développement de site Web</p>
+				<h3>Nos services</h3> <!-- Titre de la colonne -->
+				<p>Développement de projet IA</p> <!-- Description du service -->
+				<p>Prestation en IA</p> <!-- Description du service -->
+				<p>Développement de site Web</p> <!-- Description du service -->
 			</div>
 			<div class="colonne">
 				<h3> Autres pages</h3>
 				<p><a href="index.html">A propos de nous</a></p>
-				<p><a href="cv_issa.html">CV de Issa</a></p>
-				<p><a href="cv_jean.html">CV de Jean</a></p>
+				<p><a href="CV_Issa.html">CV de Issa</a></p>
+				<p><a href="CV_Jean.html">CV de Jean</a></p>
 				<p><a href="contact.html">Contactez-nous</a></p>
 			</div>
 			<div class="colonne">
@@ -133,3 +125,4 @@
 			</div>
 		</footer>
 	</body>
+</html>
